ChangeLog for the Qt GUI to Astrophotography

2020717:
	* fixing grid display in the StarChartWidget
	* add planet display in the StarChartWidget
	* separate the PlanetDrawing from the SkyDrawing so that it can be used
	  in the StarChartWidget
	* add constellation lines to StarChartWidget
	* add wide resolution to the finder chart
	* add configurable limit magnitude to StarChartWidget

20200710:
	* migrate to Qt5.15
	* portability fixes

20200206:
	* added callback to coolercontrollerwidget
	* add CoolerCallbackI.cpp
	* remove coolerupdatework.cpp

20200205:
	* converted guideportcontrollerwidget to using callbacks

20200203:
	* convert the mountcontroller widget from polling to callbacks

20200130:
	* add system info widget
	* integrate systeminfo widget into main window

20200129:
	* remove selection of device in device controllers that cannot have
	  multiple devices: mount, adaptiveoptics, guideport
	* remove dependency on GuiderDescriptor classes

20200128:
	* use RoundingSpinBox in coolercontrollerwidget
	* add RoundingSpinBox widget

20200127:
	* fix an update bug in coolercontrollerwidget (still not quite
	  sattisfying)
	* add SAO catalog to the CatalogDialog
	* add selection of horizon files to the SkyDisplayWidget
	* add local and remote configuration variables interface
	* rebuild the configuration interface for the main gui

20200126:
	* add new class configurationwidget
	* add new application astroconfig

20200121:
	* fix bug: guiding interval not read from server
	* more usage of auto types

20200116:
	* eliminate SimpleImage
	* make window radius increment in steps of 10 instead of exponentially
	* use Image2Pixmap in MonitorImage
	* calibration calculator gets guide rate from mount

20200114:
	* add display of Sun and Moon to SkyDisplayWidget

20200102:
	* add Horizon to SkyDrawing and SkyDisplayWidget classes

20191227:
	* add dew heater stuff

20191226:
	* fix border of takeimagewindow